--- a/OptionsBindSample/appsettings.json
+++ b/OptionsBindSample/appsettings.json
@@ -4,11 +4,11 @@
 
   "Students": [
     {
-      "name": "jessie",
+      "name": "jessie334",
       "age": "12"
     },
     {
-      "name": "jie",
+      "name": "jie111",
       "age": "13"
     },
     {
